novator: ACORN-1144 dark mode mobile fix

--- a/public_html/extensions/novator/storefront/view/novator/css/tm_style.css
+++ b/public_html/extensions/novator/storefront/view/novator/css/tm_style.css
@@ -3991,4 +3991,7 @@ a.share{
 {
     filter: invert(1) grayscale(100) !important;
 }
-
+[data-bs-theme="dark"] .carousel .carousel-caption
+{
+    color: var(--bs-body-color);
+}
